Add tiled background & main text

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </head>
 <body>
 
-<div class="container main">
+<div class="container">
     <div class="row">
-        <div class="col-lg-offset-2 col-lg-8 col-xs-12">
+        <div class="col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10 col-xs-12">
             <!-- offset and enlarge 'viewBox' to account for 30pt animation -->
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
             <svg viewBox="0 -30 420.23435 192.45597">
@@ -235,8 +235,19 @@
        y="151.39345"
        style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:30.99860954px;line-height:125%;font-family:'Maven Pro';-inkscape-font-specification:'Maven Pro, Normal';text-align:start;text-anchor:start;fill:#ec580f;fill-opacity:0.94117647">Neueröffnung Herbst 2016</tspan></text>
             </svg>
-        </div>
 
+        </div>
+        <div class="section col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10 col-xs-12">
+            <p>An neuer Adresse in Oberdorf, direkt neben dem Coop, entsteht unsere Physiotherapiepraxis mit
+                Trainingstherapie.
+            </p>
+            <p>Helle, grosszügige Praxisräume und moderne Trainingsgeräte erwarten unsere Patientinnen & Patienten.
+                Auch wenn Sie keine Therapie benötigen, können Sie in unserem Fitnessraum trainieren.</p>
+
+            <p>Wir freuen uns auf Sie!</p>
+            <p class="names"><b>Barbara&nbsp;Longo&nbsp;Gisin & Melina&nbsp;Dürr&nbsp;Bürgin</b><br/>Dipl. Physiotherapeutinnen FH / SRK-anerkannt</p>
+            <p>Bis zur Neueröffnung finden Sie uns in der <a href="niederdorf">bisherigen Praxis in Niederdorf</a>.</p>
+        </div>
     </div>
 </div>
 </body>
