Add new email address

--- a/niederdorf/index - kontakt.htm
+++ b/niederdorf/index - kontakt.htm
@@ -49,7 +49,7 @@
   <span class="xr_tl xr_s1" style="top: 100px;">Termine nur auf Vereinbarung</span>
   <span class="xr_tl xr_s1" style="top: 146px;">t:&nbsp; 061 599 89 56&nbsp;&nbsp; Barbara Longo</span>
   <span class="xr_tl xr_s1" style="top: 169px;">t:&nbsp; 079 776 30 66&nbsp;&nbsp; Melina D&#252;rr B&#252;rgin</span>
-  <span class="xr_tl" style="top: 193px;"><span class="xr_s1">e: </span><span class="xr_s6"><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#112;&#104;&#121;&#115;&#105;&#111;&#109;&#111;&#118;&#105;&#109;&#101;&#110;&#116;&#111;&#64;&#103;&#109;&#120;&#46;&#99;&#104;" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" >physiomovimento&#64;gmx.ch</a></span></span>
+  <span class="xr_tl" style="top: 193px;"><span class="xr_s1">e: </span><span class="xr_s6"><a href="mailto:info@physiomovimento.ch" onclick="return(xr_nn());" onmousemove="xr_mo(this,0)" >info&#64;physiomovimento.ch</a></span></span>
  </span>
  <a href="https://maps.google.ch/maps?q=Steinlerweg+4,+Niederdorf&amp;hl=de&amp;ll=47.409169,7.752861&amp;spn=0.004785,0.009645&amp;sll=47.51174,8.0114&amp;sspn=1.222528,2.469177&amp;oq=Steinlerweg+4+&amp;hnear=Steinlerweg+4,+4435+Niederdorf,+Basel-Landschaft&amp;t=m&amp;z=17&amp;iwloc=A" onclick="return(xr_nn());">
   <img class="xr_ap" src="index_htm_files/49.png" alt="" title="" onmousemove="xr_mo(this,0,event)" style="left: 40px; top: 239px; width: 410px; height: 281px;"/>
