--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
                 Auch wenn Sie keine Therapie benötigen, können Sie in unserem Fitnessraum trainieren.</p>
 
             <p>Wir freuen uns auf Sie!</p>
-            <p class="names"><b>Barbara&nbsp;Longo&nbsp;Gisin & Melina&nbsp;Dürr&nbsp;Bürgin</b><br/>Dipl. Physiotherapeutinnen FH / SRK-anerkannt</p>
+            <p class="names"><b>Barbara&nbsp;Longo&nbsp;Gisin & Melina&nbsp;Dürr&nbsp;Bürgin</b><br/>
+                Dipl. Physiotherapeutinnen FH / SRK-anerkannt<br/>
+                <a href="mailto:info@pysiomovimento.ch">info@pysiomovimento.ch</a>
+            </p>
             <p>Bis zur Neueröffnung finden Sie uns in der <a href="niederdorf">bisherigen Praxis in Niederdorf</a>.</p>
         </div>
     </div>
