Fix typo in email address

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <p>Wir freuen uns auf Sie!</p>
             <p class="names"><b>Barbara&nbsp;Longo&nbsp;Gisin & Melina&nbsp;Dürr&nbsp;Bürgin</b><br/>
                 Dipl. Physiotherapeutinnen FH / SRK-anerkannt<br/>
-                <a href="mailto:info@pysiomovimento.ch">info@pysiomovimento.ch</a>
+                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <p>Bis zur Neueröffnung finden Sie uns in der <a href="niederdorf">bisherigen Praxis in Niederdorf</a>.</p>
         </div>
