Add link to photo album

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <p>Bis zur Neueröffnung finden Sie uns in der <a href="niederdorf">bisherigen Praxis in Niederdorf</a>.</p>
+            <p>Den Baufortschritt können Sie <a href="https://goo.gl/photos/giXixUpqZRUgd7Zf8">in diesem Fotoalbum</a> verfolgen.</p>
         </div>
     </div>
 </div>
