--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
+
     <title>Physio Movimento</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
