--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
+    <link rel="apple-touch-icon image_src" href="img/apple-touch-icon.png">
 
     <title>Physio Movimento</title>
 
