Add pysio / fitness boxes

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </svg>
 
         </div>
-        <div class="section col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10 col-xs-12">
+        <div class="section col-xs-12">
             <p>
                 Herzlich Willkommen – Ihre Gesundheit steht bei uns im Zentrum.
             </p>
@@ -275,7 +275,23 @@
                 Wenn Sie keine Therapie benötigen ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
                 Trainieren Sie in unserem Fitnessraum an modernsten Geräten und in professioneller Begleitung.
             </p>
+            <a class="termin pull-right" href="#" role="button">Jetzt einen Termin vereinbaren</a>
+
         </div>
+            <div class="col-sm-6">
+                <div class="well box">
+                    <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
+                    <h1>Physio</h1>
+                    <p>Individuelle Therapie, krankenkassenanerkannt.</p>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="well box">
+                    <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
+                    <h1>Fitness</h1>
+                    <p>Kraft- und Fitnesstraining, professionell begleitet.</p>
+                </div>
+            </div>
     </div>
 </div>
 </body>
