Add footer, misc styling tweaks

--- a/index.html
+++ b/index.html
@@ -275,23 +275,44 @@
                 Wenn Sie keine Therapie benötigen ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
                 Trainieren Sie in unserem Fitnessraum an modernsten Geräten und in professioneller Begleitung.
             </p>
-            <a class="termin pull-right" href="#" role="button">Jetzt einen Termin vereinbaren</a>
+            <div class="termin pull-right">
+                <a href="#" role="button">Jetzt einen Termin vereinbaren</a>
+            </div>
 
         </div>
-            <div class="col-sm-6">
-                <div class="well box">
+        <div class="col-sm-6">
+            <a href="#">
+                <div class="well">
                     <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
                     <h1>Physio</h1>
                     <p>Individuelle Therapie, krankenkassenanerkannt.</p>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="well box">
+            </a>
+        </div>
+        <div class="col-sm-6">
+            <a href="#">
+                <div class="well">
                     <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
                     <h1>Fitness</h1>
                     <p>Kraft- und Fitnesstraining, professionell begleitet.</p>
                 </div>
-            </div>
+            </a>
+        </div>
+        <div class="footer col-xs-12">
+            <h2>Kontakt</h2>
+            <p>
+                Movimento Physio-und Trainingstherapie GmbH<br/>
+                Ueli Schadweg 3<br/>
+                4436 Oberdorf/BL<br/>
+                061 123 45 67<br/>
+                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+            </p>
+            <h2>Öffnungszeiten</h2>
+            <p>
+                Montag – Freitag: 8 – 20 Uhr<br/>
+                Samstag: 9 – 13 Uhr
+            </p>
+        </div>
     </div>
 </div>
 </body>
