--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10 col-xs-12">
             <!-- offset and enlarge 'viewBox' to account for 30pt animation -->
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-            <svg viewBox="0 -30 420.23435 192.45597">
+            <svg viewBox="0 -30 420.23435 148.50781">
                 <path
 
                         id="path5"
@@ -243,19 +243,6 @@
                         id="path79"
                         d="m 411.86716,25.417969 0,79.402341 -11.0664,0 0,7.40235 12.75,0 c 1.96875,0 3.57422,-0.6211 4.8164,-1.86719 1.24219,-1.24219 1.86719,-2.84766 1.86719,-4.81641 l 0,-80.843748 c 0,-1.96875 -0.625,-3.570312 -1.86719,-4.816406 -1.24218,-1.242187 -2.84765,-1.867187 -4.8164,-1.867187 l -12.75,0 0,7.40625 z m 0,0"
                         style="fill:#006e7d;fill-opacity:1;fill-rule:nonzero;stroke:none"></path>
-                <text
-     xml:space="preserve"
-     style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:30.99860954px;line-height:125%;font-family:'Maven Pro';-inkscape-font-specification:'Maven Pro, Normal';text-align:start;letter-spacing:0px;word-spacing:0px;text-anchor:start;fill:#000000;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-     x="31.476648"
-     y="151.39345"
-     id="text4334"
-
-     transform="scale(0.96870661,1.0323043)"><tspan
-
-       id="tspan4336"
-       x="31.476648"
-       y="151.39345"
-       style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:30.99860954px;line-height:125%;font-family:'Maven Pro';-inkscape-font-specification:'Maven Pro, Normal';text-align:start;text-anchor:start;fill:#ec580f;fill-opacity:0.94117647">Neueröffnung Herbst 2016</tspan></text>
             </svg>
 
         </div>
@@ -272,7 +259,7 @@
                 oder ihr Hobby zurück.
             </p>
             <p>
-                Wenn Sie keine Therapie benötigen ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
+                Wenn Sie keine Therapie benötigen, ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
                 Trainieren Sie in unserem Fitnessraum an modernsten Geräten und in professioneller Begleitung.
             </p>
             <div class="termin pull-right">
