Add physio page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="">Home</a></li>
-                <li><a href="#">Physio</a></li>
+                <li><a href="physio.html">Physio</a></li>
                 <li><a href="#">Fitness</a></li>
                 <li><a href="#">Team</a></li>
                 <li><a href="#">Kontakt</a></li>
@@ -268,7 +268,7 @@
 
         </div>
         <div class="col-sm-6">
-            <a href="#">
+            <a href="physio.html">
                 <div class="well">
                     <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
                     <h1>Physio</h1>
