Add fitness page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
-                <li><a href="#">Fitness</a></li>
+                <li><a href="fitness.html">Fitness</a></li>
                 <li><a href="#">Team</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
@@ -277,7 +277,7 @@
             </a>
         </div>
         <div class="col-sm-6">
-            <a href="#">
+            <a href="fitness.html">
                 <div class="well">
                     <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
                     <h1>Fitness</h1>
