--- a/fitness.html
+++ b/fitness.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Physio</title>
+    <title>Physio Movimento | Fitness</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -38,8 +38,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="#">Physio</a></li>
-                <li><a href="fitness.html">Fitness</a></li>
+                <li><a href="physio.html">Physio</a></li>
+                <li class="active"><a href="#">Fitness</a></li>
                 <li><a href="#">Team</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
@@ -47,80 +47,57 @@
     </nav>
 </div>
 <div class="container banner-container">
-    <img class="banner col-xs-12" src="img/yoga.jpg"/>
+    <img class="banner col-xs-12" src="img/dumbbells.jpg"/>
 </div>
 <div class="container">
     <div class="row">
-
         <div class="section col-xs-12">
-            <h1>Physiotherapie</h1>
+            <h1>Fitness</h1>
             <p>
-                Physiotherapie bietet eine Vielzahl von Methoden, die alle darauf zielen, Einschränkungen
-                und Beeinträchtigungen des Bewegungsapparates zu beheben.
-                Patientinnen und Patienten stehen dabei stets im Mittelpunkt.
+                Kraft, Ausdauer und Koordination bilden die Basis eines gesunden Bewegungsapparates. Die Nachhaltigkeit
+                einer Therapie erhöht sich durch regelmässiges Training. Setzen Sie deshalb Ihre Rehabilitation in
+                unserem Fitnessraum selbständig fort – wir begleiten Sie dabei.
             </p>
             <p>
-                Egal, ob Ihre Probleme durch einen Unfall, eine Krankheit, oder durch Verhaltensfehler entstanden sind,
-                wir gehen Ihren Beschwerden auf den Grund. Nach einer körperlichen Befunderhebung legen wir mit Ihnen
-                individuelle Ziele fest und stimmen unseren Behandlungsplan darauf ab.
+                Wenn Sie keine Therapie benötigen, ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
+                Gezieltes Kraft- und Ausdauertraining bilden in jedem Alter eine ausgezeichnete Prävention. Egal auf
+                welchem Leistungsniveau Sie sind, wir legen gemeinsam Ihre Ziele fest, führen Sie in das Training ein,
+                und betreuen Sie nach neusten medizinischen und sportwissenschaftlichen Erkenntnissen.
             </p>
             <p>
-                Gesundheit ist mehr als das Freisein von Krankheiten und Gebrechen. Als Physiotherapeutinnen helfen wir
-                Ihnen, Ihr körperliches, geistiges und soziales Wohlbefinden zu erlangen und zu erhalten.
-            </p>
-            <p>
-                Folgende Methoden bieten wir in unserer Praxis an:
+                Folgende Infrastruktur finden Sie bei uns::
             </p>
             <ul>
-                <li>Aktive und passive Bewegungstherapie</li>
-                <li>Manuelle Therapietechniken (Maitland, Samt)</li>
-                <li>Sportphysiotherapie</li>
-                <li>Medizinische Trainingstherapie (MTT)</li>
-                <li>Konservative und postoperative Rehabilitation</li>
-                <li>Manuelle Triggerpunkttherapie</li>
-                <li> Kinesiotaping</li>
-                <li>Medizinische Massage</li>
-                <li>Physikalische Anwendungen (Elektrotherapie, Ultraschall, Wärmeanwendungen)</li>
+                <li>Velo-Ergometer</li>
+                <li>Laufband</li>
+                <li>Ruder-Ergometer</li>
+                <li>Kurzhanteln</li>
+                <li>Langhanteln</li>
+                <li>...</li>
             </ul>
-            <div class="termin pull-right">
-                <a href="#" role="button">Jetzt einen Termin vereinbaren</a>
+            <div class="section col-xs-12">
+                <div class="termin pull-right">
+                    <a href="#" role="button">Jetzt einen Termin vereinbaren</a>
+                </div>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="well">
                 <div class="fa-icon">
-                    <i class="icon fa-icon fa fa-medkit"></i>
+                    <i class="icon fa-icon fa fa-calendar-check-o"></i>
                 </div>
-                <h1>Ärztliche Verordnung</h1>
-                <p>Behandlungskosten werden auf ärztliche Verordnung von der Krankenkasse oder Unfallversicherung
-                    übernommen.</p>
+                <h1>Abo</h1>
+                <p>12 Monate: 750 Franken<br/>
+                    Inkl. Einführung und Coaching</p>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="well">
                 <div class="fa-icon">
-                    <i class="icon fa-icon fa fa-dollar"></i>
+                    <i class="icon fa-icon fa fa-hourglass-3"></i>
                 </div>
-                <h1>Selbstzahlende</h1>
-                <p>Eine Behandlung, die nicht über die Kasse abgerechnet wird, kostet Fr. 55.- für 25 Minuten.</p>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="well">
-                <div class="fa-icon">
-                    <i class="icon fa-icon fa fa-gift"></i>
-                </div>
-                <h1>Gutscheine</h1>
-                <p>Behandlungen wie z.B. medizinische Massagen können auch verschenkt werden.</p>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="well">
-                <div class="fa-icon">
-                    <i class="icon fa-icon fa fa-clock-o"></i>
-                </div>
-                <h1>Therapiedauer</h1>
-                <p>Eine Therapiesitzung dauert in der Regel 20-30 Minuten.</p>
+                <h1>Aufwand</h1>
+                <p>Bereits 1- bis 2-mal 30 Minuten Training pro Woche reichen, um fit zu bleiben.</p>
             </div>
         </div>
         <div class="footer col-xs-12">
