--- a/fitness.html
+++ b/fitness.html
@@ -56,7 +56,7 @@
             <p>
                 Kraft, Ausdauer und Koordination bilden die Basis eines gesunden Bewegungsapparates. Die Nachhaltigkeit
                 einer Therapie erhöht sich durch regelmässiges Training. Setzen Sie deshalb Ihre Rehabilitation in
-                unserem Fitnessraum selbständig fort – wir begleiten Sie dabei.
+                unserem Fitnessraum selbständig fort – wir sind da, wenn Sie uns brauchen.
             </p>
             <p>
                 Wenn Sie keine Therapie benötigen, ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
@@ -65,7 +65,7 @@
                 und betreuen Sie nach neusten medizinischen und sportwissenschaftlichen Erkenntnissen.
             </p>
             <p>
-                Folgende Infrastruktur finden Sie bei uns::
+                Folgende Infrastruktur finden Sie bei uns:
             </p>
             <ul>
                 <li>Velo-Ergometer</li>
