Add kontakt page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="physio.html">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
                 <li><a href="#">Team</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
     </nav>
