--- a/kontakt.html
+++ b/kontakt.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Fitness</title>
+    <title>Physio Movimento | Kontakt</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -21,7 +21,6 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://use.fontawesome.com/6935404a48.js"></script>
 </head>
 <body>
 
@@ -39,69 +38,24 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
-                <li class="active"><a href="#">Fitness</a></li>
+                <li><a href="fitness.html">Fitness</a></li>
                 <li><a href="#">Team</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li class="active"><a href="#">Kontakt</a></li>
             </ul>
         </div>
     </nav>
 </div>
 <div class="container banner-container">
-    <img class="banner col-xs-12" src="img/dumbbells.jpg"/>
+    <div class="map col-xs-12 no-gutter">
+        <iframe class="banner col-xs-12" height="450"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.898857106128!2d7.746460815597803!3d47.39440627917127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4791cce863b206ef%3A0xce7a334b71eb17f5!2sUeli+Schadweg+3%2C+4436+Oberdorf!5e0!3m2!1sen!2sch!4v1469372501377"
+                frameborder="0" style="border:0" allowfullscreen scrollwheel="false"></iframe>
+    </div>
 </div>
 <div class="container">
     <div class="row">
         <div class="section col-xs-12">
-            <h1>Fitness</h1>
-            <p>
-                Kraft, Ausdauer und Koordination bilden die Basis eines gesunden Bewegungsapparates. Die Nachhaltigkeit
-                einer Therapie erhöht sich durch regelmässiges Training. Setzen Sie deshalb Ihre Rehabilitation in
-                unserem Fitnessraum selbständig fort – wir sind da, wenn Sie uns brauchen.
-            </p>
-            <p>
-                Wenn Sie keine Therapie benötigen, ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
-                Gezieltes Kraft- und Ausdauertraining bilden in jedem Alter eine ausgezeichnete Prävention. Egal auf
-                welchem Leistungsniveau Sie sind, wir legen gemeinsam Ihre Ziele fest, führen Sie in das Training ein,
-                und betreuen Sie nach neusten medizinischen und sportwissenschaftlichen Erkenntnissen.
-            </p>
-            <p>
-                Folgende Infrastruktur finden Sie bei uns:
-            </p>
-            <ul>
-                <li>Velo-Ergometer</li>
-                <li>Laufband</li>
-                <li>Ruder-Ergometer</li>
-                <li>Kurzhanteln</li>
-                <li>Langhanteln</li>
-                <li>...</li>
-            </ul>
-            <div class="section col-xs-12">
-                <div class="termin pull-right">
-                    <a href="#" role="button">Jetzt einen Termin vereinbaren</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="well">
-                <div class="fa-icon">
-                    <i class="icon fa-icon fa fa-calendar-check-o"></i>
-                </div>
-                <h1>Abo</h1>
-                <p>12 Monate: 750 Franken<br/>
-                    Inkl. Einführung und Coaching</p>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="well">
-                <div class="fa-icon">
-                    <i class="icon fa-icon fa fa-hourglass-3"></i>
-                </div>
-                <h1>Aufwand</h1>
-                <p>Bereits 1- bis 2-mal 30 Minuten Training pro Woche reichen, um fit zu bleiben.</p>
-            </div>
-        </div>
-        <div class="footer col-xs-12">
-            <h2>Kontakt</h2>
+            <h1>Kontakt</h1>
             <p>
                 Movimento Physio-und Trainingstherapie GmbH<br/>
                 Ueli Schadweg 3<br/>
@@ -109,11 +63,34 @@
                 061 123 45 67<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Öffnungszeiten</h2>
+            <h2>Barbara Longo</h2>
             <p>
-                Montag – Freitag: 8 – 20 Uhr<br/>
-                Samstag: 9 – 13 Uhr
+                061 599 89 56<br/>
+                <a href="mailto:barbara.longo@physiomovimento.ch">barbara.longo@physiomovimento.ch</a>
             </p>
+            <h2>Melina Dürr Bürgin</h2>
+            <p>
+                079 776 30 66<br/>
+                <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
+            </p>
+            <h2>Impressum</h2>
+            <div class="col-xs-12 impressum no-gutter">
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Text</div>
+                <div class="col-sm-11 col-xs-12 no-gutter">Movimento Physio-und Trainingstherapie GmbH</div>
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Logo</div>
+                <div class="col-sm-11 col-xs-12 no-gutter">Nadja Ebner</div>
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Website</div>
+                <div class="col-sm-11 col-xs-12 no-gutter">Scalable Rahel Lüthy, <a href="http://scalable.ch">scalable.ch</a></div>
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Fotos</div>
+                <div class="col-sm-11 col-xs-12 no-gutter">???</div>
+                <div class="col-sm-1 col-xs-12 no-gutter fat">Icons</div>
+                <div class="col-sm-11 col-xs-12 no-gutter"><a href="http://fontawesome.io">fontawesome.io</a>,
+                    <a href="http://freepik.com">freepik.com</a>,
+                    <a href="http://flaticon.com">flaticon.com</a>
+                    (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
+                        target="_blank">Lizenz</a>)
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -139,5 +116,16 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+
+<script>
+    // map zooming / page scrolling interaction */
+    var map = $('.map');
+    map.click(function () {
+        $('.map iframe').css("pointer-events", "auto");
+    });
+    map.mouseleave(function () {
+        $('.map iframe').css("pointer-events", "none");
+    });
+</script>
 
 </html>
