Fix termin links

--- a/fitness.html
+++ b/fitness.html
@@ -77,7 +77,7 @@
             </ul>
             <div class="section col-xs-12">
                 <div class="termin pull-right">
-                    <a href="#" role="button">Jetzt einen Termin vereinbaren</a>
+                    <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
                 </div>
             </div>
         </div>
