--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 Trainieren Sie in unserem Fitnessraum an modernsten Geräten und in professioneller Begleitung.
             </p>
             <div class="termin pull-right">
-                <a href="#" role="button">Jetzt einen Termin vereinbaren</a>
+                <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
             </div>
 
         </div>
