--- a/physio.html
+++ b/physio.html
@@ -83,7 +83,7 @@
                 <li>Physikalische Anwendungen (Elektrotherapie, Ultraschall, Wärmeanwendungen)</li>
             </ul>
             <div class="termin pull-right">
-                <a href="#" role="button">Jetzt einen Termin vereinbaren</a>
+                <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
             </div>
         </div>
         <div class="col-sm-6">
