Integrate Melina and Barbara's latest changes

--- a/fitness.html
+++ b/fitness.html
@@ -54,15 +54,17 @@
         <div class="section col-xs-12">
             <h1>Fitness</h1>
             <p>
-                Kraft, Ausdauer und Koordination bilden die Basis eines gesunden Bewegungsapparates. Die Nachhaltigkeit
-                einer Therapie erhöht sich durch regelmässiges Training. Setzen Sie deshalb Ihre Rehabilitation in
-                unserem Fitnessraum selbständig fort – wir sind da, wenn Sie uns brauchen.
+                Kraft, Ausdauer, Koordination, Schnelligkeit und Mobilität bilden die Basis eines gesunden
+                Bewegungsapparates. Die Nachhaltigkeit einer Therapie erhöht sich durch regelmässiges Training. Setzen
+                Sie deshalb Ihre Rehabilitation nach Therapieabschluss in unserem Fitnessraum selbständig fort – wir
+                sind da, wenn Sie uns brauchen.
             </p>
             <p>
                 Wenn Sie keine Therapie benötigen, ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
-                Gezieltes Kraft- und Ausdauertraining bilden in jedem Alter eine ausgezeichnete Prävention. Egal auf
-                welchem Leistungsniveau Sie sind, wir legen gemeinsam Ihre Ziele fest, führen Sie in das Training ein,
-                und betreuen Sie nach neusten medizinischen und sportwissenschaftlichen Erkenntnissen.
+                Gezieltes Training bildet in jedem Alter eine gute Prävention. Egal auf welchem Leistungsniveau Sie
+                sind, wir legen gemeinsam Ihre Ziele fest, führen Sie in das Training ein
+                und betreuen Sie nach neuesten medizinischen und sportwissenschaftlichen Erkenntnissen. Auf Anfrage
+                bieten wir auch Leistungsdiagnostik an.
             </p>
             <p>
                 Folgende Infrastruktur finden Sie bei uns:
@@ -70,10 +72,11 @@
             <ul>
                 <li>Velo-Ergometer</li>
                 <li>Laufband</li>
-                <li>Ruder-Ergometer</li>
-                <li>Kurzhanteln</li>
-                <li>Langhanteln</li>
-                <li>...</li>
+                <li>Crosstrainer</li>
+                <li>Kraftgeräte/Zuggeräte</li>
+                <li>Freihanteln</li>
+                <li>TRX</li>
+                <li>Sypoba/Koordinationsgeräte</li>
             </ul>
             <div class="section col-xs-12">
                 <div class="termin pull-right">
@@ -87,8 +90,23 @@
                     <i class="icon fa-icon fa fa-calendar-check-o"></i>
                 </div>
                 <h1>Abo</h1>
-                <p>12 Monate: 750 Franken<br/>
-                    Inkl. Einführung und Coaching</p>
+                <p>
+                <table>
+                    <tr>
+                        <td>24 Monate:&nbsp;</td>
+                        <td align="right">Fr. 1380.-</td>
+                    </tr>
+                    <tr>
+                        <td>12 Monate:&nbsp;</td>
+                        <td align="right">Fr. 750.-</td>
+                    </tr>
+                    <tr>
+                        <td>6 Monate:&nbsp;</td>
+                        <td align="right">Fr. 510.-</td>
+                    </tr>
+                </table>
+                </p>
+                <p><b>Mehr...</b></p>
             </div>
         </div>
         <div class="col-sm-6">
@@ -96,8 +114,8 @@
                 <div class="fa-icon">
                     <i class="icon fa-icon fa fa-hourglass-3"></i>
                 </div>
-                <h1>Aufwand</h1>
-                <p>Bereits 1- bis 2-mal 30 Minuten Training pro Woche reichen, um fit zu bleiben.</p>
+                <h1>Betreute Zeiten</h1>
+                <p>Selbstständiges Training ist zu den Geschäfts-Öffnungszeiten jederzeit möglich.</p>
             </div>
         </div>
         <div class="footer col-xs-12">
@@ -106,14 +124,24 @@
                 Movimento Physio-und Trainingstherapie GmbH<br/>
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
-                061 123 45 67<br/>
+                061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Öffnungszeiten</h2>
-            <p>
-                Montag – Freitag: 8 – 20 Uhr<br/>
-                Samstag: 9 – 13 Uhr
-            </p>
+            <table>
+                <tr>
+                    <td>
+                        Montag und Donnerstag:&nbsp;<br/>
+                        Dienstag, Mittwoch, Freitag:&nbsp;<br/>
+                        Samstag:&nbsp;
+                    </td>
+                    <td>
+                        7 Uhr – 20 Uhr<br/>
+                        8 Uhr – 21 Uhr<br/>
+                        9 Uhr – 13 Uhr
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
