--- a/index.html
+++ b/index.html
@@ -251,12 +251,11 @@
                 Herzlich Willkommen – Ihre Gesundheit steht bei uns im Zentrum.
             </p>
             <p>
-                In unseren neu eröffneten Räumen in Oberdorf bieten wir das gesamte Spektrum an Physiotherapie und
+                In unseren neu eröffneten Räumen in Oberdorf bieten wir ein grosses Spektrum an Physiotherapie und
                 modernem Fitness Training.
             </p>
             <p>
-                Wir gehen Ihren Beschwerden auf den Grund und begleiten Sie in einen schmerzfreien Alltag, ihren Beruf,
-                oder ihr Hobby zurück.
+                Wir gehen Ihren Beschwerden auf den Grund und begleiten Sie zurück in Ihren Alltag.
             </p>
             <p>
                 Wenn Sie keine Therapie benötigen, ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
@@ -281,7 +280,7 @@
                 <div class="well">
                     <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
                     <h1>Fitness</h1>
-                    <p>Kraft- und Fitnesstraining, professionell begleitet.</p>
+                    <p>Kraft- und Ausdauertraining, professionell begleitet.</p>
                 </div>
             </a>
         </div>
@@ -291,14 +290,24 @@
                 Movimento Physio-und Trainingstherapie GmbH<br/>
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
-                061 123 45 67<br/>
+                061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Öffnungszeiten</h2>
-            <p>
-                Montag – Freitag: 8 – 20 Uhr<br/>
-                Samstag: 9 – 13 Uhr
-            </p>
+            <table>
+                <tr>
+                    <td>
+                        Montag und Donnerstag:&nbsp;<br/>
+                        Dienstag, Mittwoch, Freitag:&nbsp;<br/>
+                        Samstag:&nbsp;
+                    </td>
+                    <td>
+                        7 Uhr – 20 Uhr<br/>
+                        8 Uhr – 21 Uhr<br/>
+                        9 Uhr – 13 Uhr
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
