--- a/kontakt.html
+++ b/kontakt.html
@@ -60,19 +60,23 @@
                 Movimento Physio-und Trainingstherapie GmbH<br/>
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
-                061 123 45 67<br/>
+                061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Barbara Longo</h2>
             <p>
-                061 599 89 56<br/>
                 <a href="mailto:barbara.longo@physiomovimento.ch">barbara.longo@physiomovimento.ch</a>
             </p>
-            <h2>Melina Dürr Bürgin</h2>
+            <h2>Melina Dürr</h2>
             <p>
-                079 776 30 66<br/>
                 <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
             </p>
+            <h2>Reto Maurer</h2>
+            <p>
+                <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
+            </p>
+        </div>
+        <div class="footer col-xs-12">
             <h2>Impressum</h2>
             <div class="col-xs-12 impressum no-gutter">
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Text</div>
@@ -91,6 +95,21 @@
                         target="_blank">Lizenz</a>)
                 </div>
             </div>
+            <h2>Öffnungszeiten</h2>
+            <table>
+                <tr>
+                    <td>
+                        Montag und Donnerstag:&nbsp;<br/>
+                        Dienstag, Mittwoch, Freitag:&nbsp;<br/>
+                        Samstag:&nbsp;
+                    </td>
+                    <td>
+                        7 Uhr – 20 Uhr<br/>
+                        8 Uhr – 21 Uhr<br/>
+                        9 Uhr – 13 Uhr
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
