--- a/physio.html
+++ b/physio.html
@@ -55,12 +55,11 @@
         <div class="section col-xs-12">
             <h1>Physiotherapie</h1>
             <p>
-                Physiotherapie bietet eine Vielzahl von Methoden, die alle darauf zielen, Einschränkungen
-                und Beeinträchtigungen des Bewegungsapparates zu beheben.
-                Patientinnen und Patienten stehen dabei stets im Mittelpunkt.
+                Physiotherapie bietet eine Vielzahl von Methoden, die alle darauf zielen,  Beeinträchtigungen des
+                Bewegungsapparates zu reduzieren.
             </p>
             <p>
-                Egal, ob Ihre Probleme durch einen Unfall, eine Krankheit, oder durch Verhaltensfehler entstanden sind,
+                Egal, ob Ihre Probleme durch einen Unfall, eine Krankheit oder durch Verhaltensfehler entstanden sind,
                 wir gehen Ihren Beschwerden auf den Grund. Nach einer körperlichen Befunderhebung legen wir mit Ihnen
                 individuelle Ziele fest und stimmen unseren Behandlungsplan darauf ab.
             </p>
@@ -76,6 +75,7 @@
                 <li>Manuelle Therapietechniken (Maitland, Samt)</li>
                 <li>Sportphysiotherapie</li>
                 <li>Medizinische Trainingstherapie (MTT)</li>
+                <li>Leistungsdiagnostik auf Anfrage</li>
                 <li>Konservative und postoperative Rehabilitation</li>
                 <li>Manuelle Triggerpunkttherapie</li>
                 <li> Kinesiotaping</li>
@@ -111,7 +111,7 @@
                     <i class="icon fa-icon fa fa-gift"></i>
                 </div>
                 <h1>Gutscheine</h1>
-                <p>Behandlungen wie z.B. medizinische Massagen können auch verschenkt werden.</p>
+                <p>Behandlungen wie z.B. medizinische Massagen können auch verschenkt werden (Fr. 55.- für 25 Minuten).</p>
             </div>
         </div>
         <div class="col-sm-6">
@@ -129,14 +129,24 @@
                 Movimento Physio-und Trainingstherapie GmbH<br/>
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
-                061 123 45 67<br/>
+                061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Öffnungszeiten</h2>
-            <p>
-                Montag – Freitag: 8 – 20 Uhr<br/>
-                Samstag: 9 – 13 Uhr
-            </p>
+            <table>
+                <tr>
+                    <td>
+                        Montag und Donnerstag:&nbsp;<br/>
+                        Dienstag, Mittwoch, Freitag:&nbsp;<br/>
+                        Samstag:&nbsp;
+                    </td>
+                    <td>
+                        7 Uhr – 20 Uhr<br/>
+                        8 Uhr – 21 Uhr<br/>
+                        9 Uhr – 13 Uhr
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
