Embed map with actual place rather than address

--- a/kontakt.html
+++ b/kontakt.html
@@ -47,9 +47,8 @@
 </div>
 <div class="container banner-container">
     <div class="map col-xs-12 no-gutter">
-        <iframe class="banner col-xs-12" height="450"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.898857106128!2d7.746460815597803!3d47.39440627917127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4791cce863b206ef%3A0xce7a334b71eb17f5!2sUeli+Schadweg+3%2C+4436+Oberdorf!5e0!3m2!1sen!2sch!4v1469372501377"
-                frameborder="0" style="border:0" allowfullscreen scrollwheel="false"></iframe>
+        <iframe class="banner col-xs-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.8988571061286!2d7.746460815642969!3d47.394406279171264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4791cce863b206ef%3A0x190eb3a8b85a4291!2sMovimento+Physio-+und+Trainingstherapie+GmbH!5e0!3m2!1sen!2sch!4v1471589161832"
+                width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 </div>
 <div class="container">
@@ -84,7 +83,8 @@
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Logo</div>
                 <div class="col-sm-11 col-xs-12 no-gutter">Nadja Ebner</div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Website</div>
-                <div class="col-sm-11 col-xs-12 no-gutter">Scalable Rahel Lüthy, <a href="http://scalable.ch">scalable.ch</a></div>
+                <div class="col-sm-11 col-xs-12 no-gutter">Scalable Rahel Lüthy, <a href="http://scalable.ch">scalable.ch</a>
+                </div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Fotos</div>
                 <div class="col-sm-11 col-xs-12 no-gutter">???</div>
                 <div class="col-sm-1 col-xs-12 no-gutter fat">Icons</div>
