Add 'Abo Details' in a modal dialog

--- a/fitness.html
+++ b/fitness.html
@@ -90,7 +90,6 @@
                     <i class="icon fa-icon fa fa-calendar-check-o"></i>
                 </div>
                 <h1>Abo</h1>
-                <p>
                 <table>
                     <tr>
                         <td>24 Monate:&nbsp;</td>
@@ -105,8 +104,52 @@
                         <td align="right">Fr. 510.-</td>
                     </tr>
                 </table>
-                </p>
-                <p><b>Mehr...</b></p>
+                <br/>
+                <a class="modal-trigger" href="#" role="button" data-toggle="modal" data-target="#aboDetails">
+                    Mehr Details...
+                </a>
+                <div class="modal fade" tabindex="-1" role="dialog" id="aboDetails">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                                <h2 class="modal-title">Abo Details</h2>
+                            </div>
+                            <div class="modal-body">
+                                <p>
+                                    Mit einem Abo dürfen Sie während den Geschäfts-Öffnungszeiten uneingeschränkt
+                                    selbständig trainieren.
+                                </p>
+                                <p>
+                                    Wir werden Ihnen alle Geräte vorstellen, und zusammen ein Trainingsprogramm
+                                    ausarbeiten. Nebst diesem Einführungstraining sind zwei Coachings im Abo-Preis
+                                    einbegriffen.
+                                </p>
+                                <p>
+                                    Auf die Preise gewähren wir folgende Rabatte:
+                                </p>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            Personen im gleichen Haushalt lebend:&nbsp;<br/>
+                                            Studierende/Lehrlinge bis 25 Jahre:&nbsp;<br/>
+                                            Nahtlose Erneuerung:&nbsp;
+                                        </td>
+                                        <td>
+                                            10%<br/>
+                                            10%<br/>
+                                            Fr. 20.- Reduktion
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Schliessen</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-sm-6">
