Experiment: No tiles on left/right border

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
     <nav class="row navbar navbar-default">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -311,6 +311,7 @@
         </div>
     </div>
 </div>
+<div class="tile"></div>
 </body>
 
 <script type="text/javascript">
