--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
     <nav class="row navbar navbar-default">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -45,13 +45,13 @@
         </div>
     </nav>
 </div>
-<div class="container banner-container">
+<div class="container-fluid banner-container">
     <div class="map col-xs-12 no-gutter">
         <iframe class="banner col-xs-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.8988571061286!2d7.746460815642969!3d47.394406279171264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4791cce863b206ef%3A0x190eb3a8b85a4291!2sMovimento+Physio-+und+Trainingstherapie+GmbH!5e0!3m2!1sen!2sch!4v1471589161832"
                 width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="section col-xs-12">
             <h1>Kontakt</h1>
@@ -113,6 +113,7 @@
         </div>
     </div>
 </div>
+<div class="tile"></div>
 </body>
 
 <script>
