--- a/physio.html
+++ b/physio.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
     <nav class="row navbar navbar-default">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -46,10 +46,10 @@
         </div>
     </nav>
 </div>
-<div class="container banner-container">
+<div class="container-fluid banner-container">
     <img class="banner col-xs-12" src="img/yoga.jpg"/>
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
 
         <div class="section col-xs-12">
@@ -150,6 +150,7 @@
         </div>
     </div>
 </div>
+<div class="tile"></div>
 </body>
 
 <script>
