--- a/physio.html
+++ b/physio.html
@@ -41,7 +41,7 @@
                 <li class="active"><a href="#">Physio</a></li>
                 <li><a href="fitness.html">Fitness</a></li>
                 <li><a href="#">Team</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </div>
     </nav>
