Fix row nesting (affects link behavior on touch screens)

--- a/index.html
+++ b/index.html
@@ -264,8 +264,9 @@
             <div class="termin pull-right">
                 <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
             </div>
-
         </div>
+    </div>
+    <div class="row">
         <div class="col-sm-6">
             <a href="physio.html">
                 <div class="well">
