--- a/fitness.html
+++ b/fitness.html
@@ -78,12 +78,12 @@
                 <li>TRX</li>
                 <li>Sypoba/Koordinationsgeräte</li>
             </ul>
-            <div class="section col-xs-12">
-                <div class="termin pull-right">
-                    <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
-                </div>
+            <div class="termin pull-right">
+                <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-sm-6">
             <div class="well">
                 <div class="fa-icon">
