--- a/physio.html
+++ b/physio.html
@@ -86,6 +86,8 @@
                 <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-sm-6">
             <div class="well">
                 <div class="fa-icon">
