Make complete 'Termin' box clickable

--- a/fitness.html
+++ b/fitness.html
@@ -78,9 +78,7 @@
                 <li>TRX</li>
                 <li>Sypoba/Koordinationsgeräte</li>
             </ul>
-            <div class="termin pull-right">
-                <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
-            </div>
+            <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
     </div>
     <div class="row">
