--- a/index.html
+++ b/index.html
@@ -261,9 +261,7 @@
                 Wenn Sie keine Therapie benötigen, ist es umso wichtiger, dass Sie zu Ihrer Gesundheit Sorge tragen.
                 Trainieren Sie in unserem Fitnessraum an modernsten Geräten und in professioneller Begleitung.
             </p>
-            <div class="termin pull-right">
-                <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
-            </div>
+            <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
     </div>
     <div class="row">
