--- a/physio.html
+++ b/physio.html
@@ -82,9 +82,7 @@
                 <li>Medizinische Massage</li>
                 <li>Physikalische Anwendungen (Elektrotherapie, Ultraschall, Wärmeanwendungen)</li>
             </ul>
-            <div class="termin pull-right">
-                <a href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
-            </div>
+            <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
     </div>
     <div class="row">
