--- a/physio.html
+++ b/physio.html
@@ -136,14 +136,14 @@
             <table>
                 <tr>
                     <td>
-                        Montag und Donnerstag:&nbsp;<br/>
-                        Dienstag, Mittwoch, Freitag:&nbsp;<br/>
-                        Samstag:&nbsp;
+                        Mo und Do:&nbsp;<br/>
+                        Di, Mi, Fr:&nbsp;<br/>
+                        Sa:&nbsp;
                     </td>
                     <td>
-                        7 Uhr – 20 Uhr<br/>
-                        8 Uhr – 21 Uhr<br/>
-                        9 Uhr – 13 Uhr
+                        7 – 20 Uhr<br/>
+                        8 – 21 Uhr<br/>
+                        9 – 13 Uhr
                     </td>
                 </tr>
             </table>
