Replace hoverable wells with 'Mehr...' links

--- a/fitness.html
+++ b/fitness.html
@@ -103,8 +103,8 @@
                     </tr>
                 </table>
                 <br/>
-                <a class="modal-trigger" href="#" role="button" data-toggle="modal" data-target="#aboDetails">
-                    Mehr Details...
+                <a class="more" href="#" role="button" data-toggle="modal" data-target="#aboDetails">
+                    Mehr&hellip;
                 </a>
                 <div class="modal fade" tabindex="-1" role="dialog" id="aboDetails">
                     <div class="modal-dialog" role="document">
