--- a/index.html
+++ b/index.html
@@ -266,22 +266,25 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <a href="physio.html">
-                <div class="well">
-                    <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
-                    <h1>Physio</h1>
-                    <p>Individuelle Therapie, krankenkassenanerkannt.</p>
-                </div>
-            </a>
+            <div class="well">
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
+                <h1>Physio</h1>
+                <p>Individuelle Therapie, krankenkassenanerkannt.</p>
+                <br/>
+                <a class="more" href="physio.html" role="button">
+                    Mehr&hellip;
+                </a>
+            </div>
         </div>
         <div class="col-sm-6">
-            <a href="fitness.html">
-                <div class="well">
-                    <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
-                    <h1>Fitness</h1>
-                    <p>Kraft- und Ausdauertraining, professionell begleitet.</p>
-                </div>
-            </a>
+            <div class="well">
+                <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
+                <h1>Fitness</h1>
+                <p>Kraft- und Ausdauertraining, professionell begleitet.</p>
+                <a class="more" href="fitness.html" role="button">
+                    Mehr&hellip;
+                </a>
+            </div>
         </div>
         <div class="footer col-xs-12">
             <h2>Kontakt</h2>
